--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,11 +4,14 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Eventos Cercanos</title>
+	<title>Planify</title>
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/icons/planify circulo.svg">
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/icons/planify circulo.svg">
 	<link rel="stylesheet" href="./css/estilo.css" />
 	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css">
 </head>
 
 <body>
@@ -22,20 +25,27 @@
 	</header>
 	<!-- 🔹 SIDEBAR -->
 	<div class="sidebar">
-		<h5>🎟️ EventosApp</h5>
+		<div class="d-flex justify-content-center align-items-center pb-3 pt-3">
+			<img src="assets/icons/planify circulo.svg" alt="Planify" style="width:50px; height: 50px;">
+			<h5 style="margin: 0;margin-right: 20px; padding-inline: 12px;">Planify</h5>
+		</div>
 
-		<a href="#" data-bs-toggle="collapse" data-bs-target="#usuarioMenu" aria-expanded="false">
-			👤 Organizadores
+		<a href="#" class="menu-item d-flex justify-content-center align-items-center w-100 text-decoration-none gap-2" style="padding-left:0px;"
+			data-bs-toggle="collapse" data-bs-target="#usuarioMenu" aria-expanded="false">
+			<i class="ti ti-user-filled fs-4" aria-hidden="true"></i>
+			<span>Organizadores</span>
 		</a>
 		<div class="collapse ps-3" id="usuarioMenu">
 			<!-- Cambiar dinámicamente según sesión -->
 		</div>
-		<a href="#" data-bs-toggle="modal" data-bs-target="#filtrosModal">
-			🧭 Filtros
+		<a href="#" class="menu-item d-flex justify-content-center align-items-center w-100 text-decoration-none gap-2" style="padding-left:0px;"
+			data-bs-toggle="modal" data-bs-target="#filtrosModal">
+			<i class="ti ti-filter-filled fs-4" aria-hidden="true"></i>
+			<span>Filtros</span>
 		</a>
-			<button id="btnQuitarFiltros" class="btn btn-outline-danger d-none quitar-filtros-btn">
-				Quitar filtros
-			</button>
+		<button id="btnQuitarFiltros" class="btn btn-outline-danger d-none quitar-filtros-btn">
+			Quitar filtros
+		</button>
 	</div>
 
 
@@ -57,7 +67,7 @@
 							<label for="loginPassword" class="form-label">Contraseña</label>
 							<div class="input-group">
 								<input type="password" id="loginPassword" name="password" class="form-control" required
-									minlength="6">
+									minlength="6" data-password>
 								<button class="btn btn-light border" type="button" data-toggle-password><i
 										class="bi bi-eye-slash" data-icon></i></button>
 							</div>
