--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -49,6 +49,21 @@
 	</div>
 
 
+	<!-- Panel de resultados -->
+	<div id="search-results-panel" class="search-results">
+		<div class="search-header">
+			<span>Resultados</span>
+			<button id="btn-minimizar-search">➖</button>
+		</div>
+		<!-- Resultados de búsqueda -->
+		<ul id="search-results-list"></ul>
+	</div>
+
+	<!-- Botón para reabrir -->
+	<button id="btn-abrir-search" class="search-tab">
+		🔍
+	</button>
+
 	<!--  MODAL LOGIN  -->
 	<div class="modal fade" id="loginModal" tabindex="-1" aria-hidden="true">
 		<div class="modal-dialog modal-sm modal-dialog-centered">
