--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -63,6 +63,34 @@
 	<button id="btn-abrir-search" class="search-tab">
 		🔍
 	</button>
+	
+	<!-- VERIFICACION DE EDAD -->
+	<div class="modal fade" id="ageGateModal" data-bs-backdrop="static" data-bs-keyboard="false">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Confirmación de edad</h5>
+      </div>
+      <div class="modal-body">
+        <p>
+          Esta aplicación puede mostrar eventos destinados únicamente a mayores de 18 años.
+          ¿Confirmás que sos mayor de edad?
+        </p>
+      </div>
+      <div class="modal-footer">
+        <button id="btn-age-exit" class="btn btn-secondary">
+          Salir
+        </button>
+        <button id="btn-age-deny" class="btn btn-warning">
+          Soy MENOR de 18
+        </button>
+        <button id="btn-age-confirm" class="btn btn-success">
+          Soy MAYOR de 18
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
 
 	<!--  MODAL LOGIN  -->
 	<div class="modal fade" id="loginModal" tabindex="-1" aria-hidden="true">
@@ -449,7 +477,7 @@
 									<th>Precio</th>
 									<th>URL compra externa</th>
 									<th>+18</th>
-									<th>Validado</th>
+									<th>Estado</th>
 									<th>Redes Sociales</th>
 									<th>Acciones</th>
 								</tr>
