--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -484,7 +484,7 @@
 
 	<!-- MODAL MOSTRAR DETALLES COMPLETO DE EVENTOS / ORGANIZADOR (SOLO ADMINISTRADOR) -->
 	<div class="modal fade" id="modalDetalleGenerico" tabindex="-1" aria-hidden="true">
-		<div class="modal-dialog modal-lg modal-dialog-centered">
+		<div class="modal-dialog modal-xl modal-dialog-centered">
 			<div class="modal-content">
 				<div class="modal-header bg-info text-white">
 					<h5 class="modal-title"></h5>
@@ -503,9 +503,9 @@
 
 
 	<!-- MODAL ADMINISTRAR EVENTOS DE UN ORGANIZADOR -->
-	<div class="modal fade" id="modalAdministrarEventosOrganizador" tabindex="-1"
+	<div class="modal fade modal-lg" id="modalAdministrarEventosOrganizador" tabindex="-1"
 		aria-labelledby="detalleEventoModalLabel" aria-hidden="true">
-		<div class="modal-dialog modal-lg modal-dialog-centered">
+		<div class="modal-dialog modal-xl modal-dialog-centered">
 			<div class="modal-content">
 				<div class="modal-header bg-primary text-white">
 					<h5 class="modal-title" id="detalleEventoModalLabel">Detalles del Evento</h5>
@@ -517,7 +517,7 @@
 							<thead class="table-dark">
 								<tr>
 									<th>Título</th>
-									<th>Descripción</th>
+									<th class="col-evento">Descripción</th>
 									<th>Categoría</th>
 									<th>Ubicación</th>
 									<th>Fecha creación</th>
